<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nikhilreddy.currencyconverterapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="32sp"
        android:textColor="#1f54e5" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtCurrency"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/txtCurrency"
        android:inputType="numberDecimal"
        android:textSize="28sp" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:background="#9ae3c7"
        android:layout_below="@+id/txtCurrency"
        android:layout_alignLeft="@+id/txtTitle"
        android:layout_alignStart="@+id/txtTitle"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radDolToEur"
            android:id="@+id/radDolToEur"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textColor="#ed1212"
            android:textSize="20sp"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radDolToPes"
            android:id="@+id/radDolToPes"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"
            android:textColor="#ed1212" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radDolToRup"
            android:id="@+id/radDolToRup"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"
            android:textColor="#ed1212" />
    </RadioGroup>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCurrency"
        android:id="@+id/btnCurrency"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="#c2c5f5"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:layout_below="@+id/btnCurrency"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="36sp"
        android:textColor="#0000FF" />
</RelativeLayout>
